--- a/templates/dynamic/post_js.html.twig
+++ b/templates/dynamic/post_js.html.twig
@@ -30,10 +30,10 @@
         });
 
         function filter_open() {
-            if (document.getElementById("filterSidebar").style.display === "none") {
-                document.getElementById("filterSidebar").style.display = "block";
+            if (document.getElementById("filterToggle").style.display === "none") {
+                document.getElementById("filterToggle").style.display = "block";
             } else {
-                document.getElementById("filterSidebar").style.display = "none";
+                document.getElementById("filterToggle").style.display = "none";
             }
         }
 
