--- a/templates/products.html.twig
+++ b/templates/products.html.twig
@@ -51,7 +51,7 @@
     </div>
 
     <button class="filter-button hidden-md hidden-lg" onclick="filter_open()">Filter ☰</button>
-    <div class="filter-block" style="display: none;" id="filterSidebar">
+    <div class="filter-block" style="display: none;" id="filterToggle">
         <div class="panel panel-default">
             {#<button onclick="filter_close()" class="filter-item filter-large">Close &times;</button>#}
             <div class="panel-heading box-shadow">
