--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -498,38 +498,6 @@ footer li a {
 	background: white;
 }
 
-.filter-sidebar {
-	height: 100%;
-	width: 200px;
-	background-color: #fff;
-	position: fixed!important;
-	z-index: 1;
-	overflow: auto;
-}
-
-.filter-block {
-	z-index: 1000;
-}
-
-.filter-block .filter-item {
-	width: 100%;
-	display: block;
-	padding: 8px 16px;
-	text-align: left;
-	border: none;
-	white-space: normal;
-	float: none;
-	outline: 0;
-}
-
-.filter-border-left {
-	border-left: 1px solid #ccc!important;
-}
-
-.filter-xlarge {
-	font-size: 24px!important;
-}
-
 .filter-button {
 	float: right;
 	margin-top: -40px;
@@ -542,9 +510,17 @@ footer li a {
 	border-radius: 2px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1200px) {
+@media screen and (min-width: 1024px) and (max-width: 1365px) {
 	.product-details {
 		float: left !important;
+	}
+
+	.product .product-price {
+		width: 18%;
+	}
+	.product .order-link {
+		position: relative;
+		float: left;
 	}
 
 	.price-box .order {
