--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -749,3 +749,126 @@ footer li a {
 		font-size:175%;
 	}
 }
+
+@media screen and (min-width: 600px) {
+	.content {
+		padding-top: 52px;
+	}
+	.slogan {
+		height: 40px;
+	}
+	.price-box {
+		margin-left: -15px;
+	}
+}
+
+@media screen and (max-width: 430px) {
+	.header {
+		padding-top: 100px;
+	}
+	.slogan {
+		height: 50px;
+	}
+
+	.nav-pills>li>a {
+		padding: 5px 10px;
+	}
+	.xs-menu {
+		left:0;
+	}
+	.filter-box {
+		margin-top: 25px;
+	}
+	footer ul {
+		padding:0;
+	}
+	footer ul li {
+		padding-left:0 !important;
+	}
+	.ftrtop .social {
+		padding: 0;
+		margin-top: -4%;
+	}
+	.ftrtop .social a {
+		float: left;
+		margin: 2px;
+	}
+}
+
+.totalPrice{
+	float: right;
+	margin-top: 10px;
+}
+
+@media screen and (max-width: 600px){
+	.floating-box {
+		text-align: center !important;
+	}
+}
+
+@media screen and (max-width: 600px){
+	.OrderButton .btn-block {
+		width: 100% ;
+		margin-left: 45px;
+	}
+}
+
+@media screen and (max-width: 600px){
+	.OrderButton {
+		text-align: center !important;
+		width: 200px !important;
+	}
+}
+
+@media screen and (max-width: 600px){
+	#shipping-status_01 {
+		text-align: center;
+		display: none;
+	}
+}
+
+@media screen and (max-width: 600px){
+	.shopping-bag {
+		min-width: 100%;
+	}
+}
+
+@media screen and (max-width: 600px){
+	.order-tabs li {
+		min-width: 25%;
+		max-width: 25%;
+		min-height: 50px;
+		max-height: 50px;
+	}
+}
+
+@media screen and (max-width: 600px){
+	.totalPrice {
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 990px){
+	.totalPrice {
+		width: 100%;
+	}
+}
+
+
+@media screen and (max-width: 600px){
+	.label {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 600px){
+	.product-name {
+		color: #337ab7;
+	}
+}
+
+@media screen and (max-width: 991px){
+	.payment_lg {
+		display: none;
+	}
+}
