--- a/templates/checkout.html.twig
+++ b/templates/checkout.html.twig
@@ -1,3 +1,7 @@
+
+
+
+
 {% extends "layouts/layout.html.twig" %}
 
 {% block content %}
@@ -7,26 +11,25 @@
     <ul class="nav nav-tabs order-tabs">
         <li>
             <a href="{{ lang.url.shopping_cart }}">
-                <strong>Stap 1 - </strong>
-                Winkelwagen
+                <strong>Stap 1</strong>
+               <div class="hidden-xs">&nbsp;- Winkelwagen</div>
             </a>
-        </li>
         <li>
             <a href="{{ lang.url.customer_details }}">
-                <strong>Stap 2 - </strong>
-                Uw gegevens
+                <strong>Stap 2</strong>
+                <div class="hidden-xs">&nbsp;- Uw gegevens</div>
             </a>
         </li>
         <li class="active">
             <a href="javascript:void(0);">
-                <strong>Stap 3 - </strong>
-                Bevestigen en betalen
+                <strong>Stap 3</strong>
+                <div class="hidden-xs">&nbsp;- Bevestigen en betalen</div>
             </a>
         </li>
         <li class="disabled">
             <a href="javascript:void(0);">
-                <strong>Stap 4 - </strong>
-                Bestelling geplaatst
+                <strong>Stap 4</strong>
+                <div class="hidden-xs">&nbsp;- Bestelling geplaatst</div>
             </a>
         </li>
     </ul>
@@ -45,40 +48,254 @@
 
     <form class="form-horizontal confirm-form bv-form" role="form" method="post">
     <input type="hidden" name="submitting" value="1" />
-    <table class="customer-details-overview table table-bordered">
-        <thead>
-        <tr>
-            <th width="33%">Factuuradres</th>
-            <th width="34%">Afleveradres</th>
-            <th width="33%">Contactgegevens</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>{{ customer_details.billing_address.first_name ~ ' ' ~ customer_details.billing_address.last_name }}</td>
-            <td>{{ customer_details.shipping_is_billing ? customer_details.billing_address.first_name ~ ' ' ~ customer_details.billing_address.last_name : customer_details.shipping_adress.first_name ~ ' ' ~ customer_details.shipping_adress.last_name }}</td>
-            <td>{{ customer_details.first_name }} {{ customer_details.last_name }}</td>
-        </tr>
-        <tr>
-            <td rowspan="2">{{ customer_details.billing_address.address_1 ~ ' ' ~ (customer_details.billing_address.address_2 ? customer_details.billing_address.address_2 ~ ' ' : '') ~ customer_details.billing_address.address_house_nr }}</td>
-            <td rowspan="2">{{ customer_details.shipping_is_billing ? customer_details.billing_address.address_1 ~ ' ' ~ (customer_details.billing_address.address_2 ? customer_details.billing_address.address_2 ~ ' ' : '') ~ customer_details.billing_address.address_house_nr : customer_details.shipping_address.address_1 ~ ' ' ~ (customer_details.shipping_address.address_2 ? customer_details.shipping_address.address_2 ~ ' ' : '') ~ customer_details.shipping_address.address_house_nr }}</td>
-            <td>{{ customer_details.email }}</td>
-        </tr>
-        <tr>
-            <td>{{ customer_details.telephone }}</td>
-        </tr>
-        <tr>
-            <td>{{ customer_details.billing_address.postcode ~ ' ' ~ customer_details.billing_address.city }}</td>
-            <td>{{ customer_details.shipping_is_billing ? customer_details.billing_address.postcode ~ ' ' ~ customer_details.billing_address.city : customer_details.shipping_address.postcode ~ ' ' ~ customer_details.shipping_address.city }}</td>
-        </tr>
-        <tr>
-            <td>{{ customer_details.billing_address.country_name }}</td>
-            <td>{{ customer_details.shipping_is_billing ? customer_details.billing_address.country_name : customer_details.shipping_address.country_name }}</td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="row" style="margin: 0;">
+    		<div class="row">
+    			<div class="col-xs-6">
+    				<address>
+    				<strong>Factuuradres:</strong><br>
+    					{{ customer_details.billing_address.first_name ~ ' ' ~ customer_details.billing_address.last_name }}<br>
+    					{{ customer_details.billing_address.address_1 ~ ' - ' ~ (customer_details.billing_address.address_2 ? customer_details.billing_address.address_2 ~ ' ' : '') ~ customer_details.billing_address.address_house_nr }}<br>
+    					{{ customer_details.billing_address.postcode ~ ' ' ~ customer_details.billing_address.city }}<br>
+    					{{ customer_details.billing_address.country_name }}<br>
+    				</address>
+    			</div>
+    			<div class="col-xs-6 text-right">
+    				<address>
+        			<strong>Afleveradres: </strong><br>
+    					{{ customer_details.shipping_address.first_name ~ ' ' ~ customer_details.shipping_address.last_name }}<br>
+    					{{ customer_details.shipping_is_billing ? customer_details.billing_address.address_1 ~ ' ' ~ (customer_details.billing_address.address_2 ? customer_details.billing_address.address_2 ~ ' ' : ' ') ~ customer_details.billing_address.address_house_nr : customer_details.shipping_address.address_1 ~ ' - ' ~ (customer_details.shipping_address.address_2 ? customer_details.shipping_address.address_2 ~ ' ' : '') ~ customer_details.shipping_address.address_house_nr}}<br>
+                        {{ customer_details.shipping_is_billing ? customer_details.billing_address.postcode ~ ' ' ~ customer_details.billing_address.city : customer_details.shipping_address.postcode ~ ' ' ~ customer_details.shipping_address.city }}<br>
+    					{{ customer_details.shipping_is_billing ? customer_details.billing_address.country_name : customer_details.shipping_address.country_name }}
+    				</address>
+    			</div>
+    		</div>
+    			<div class="row">
+    			<div class="col-xs-6">
+    				<address>
+    					<strong>Contact info:</strong><br>
+    					{{ customer_details.email }}<br>
+    					{{ customer_details.telephone }}<br><br>
+    				</address>
+    			</div>
+    		</div>
+    	</div>
 
+		<div class="col-xs-12">
+			<div class="panel panel-info">
+				<div class="panel-heading">
+					<div class="panel-title">
+						<div class="row">
+							<div class="col-md-3 col-md-offset-2 hidden-xs">
+								<h4>Product</h4>
+							</div>
+							<div class="col-md-3 hidden-xs">
+								<h4>Aantal</h4>
+							</div>
+							<div class="col-md-3 hidden-xs">
+								<h4>Stukprijs</h4>
+							</div>
+							<div class="col-md-3 hidden-xs">
+								<h4>Totaalprijs</h4>
+							</div>
+						</div>
+					</div>
+				</div>
 
+				<div class="panel-body">
+				{% for order_product in shopping_cart %}
+					<div class="row">
+						<div class="col-md-2 hidden-xs"> <img src="{{ order_product.product.images|length > 0 ? order_product.product.images[0].url : '/img/no_image.gif' }}"
+                             class="fill">
+
+						</div>
+						<div class="col-xs-6 col-md-2">
+							<strong><a class="product-name" href="{{ lang.url.product ~ order_product.product.name|url_encode ~ '/' ~ order_product.product.id }}">{{ order_product.product.name }}</a></strong>
+                        <br>
+                          {% if order_product.product.stock is defined and order_product.product.stock > 0 %}
+
+                            {% if order_product.quantity > order_product.product.stock %}
+                                <div class="label label-warning hidden-xs">
+                                Niet genoeg op voorraad, langere levertijd
+                                </div>
+                            {% else %}
+                                <div class="label label-success hidden-xs">
+                                    {% if order_product.product.stock > 10 %}
+                                        <div class="label label-success">Ruimschoots op voorraad</div>
+                                    {% else %}
+                                        <div class="label label-success">Op voorraad</div>
+                                    {% endif %}
+                                </div>
+                                <br/>
+                            {% endif %}
+
+                            {% if product.shipping_details.shipping_days %}
+                                <div class="label label-info">Levertijd {{ product.shipping_details.shipping_days }}
+                                    werkdag(en)
+                                </div>
+                            {% else %}
+                                <div class="label label-info">Levertijd 1-3 werkdag(en)</div>
+                            {% endif %}
+                        {% else %}
+                            <div class="label label-warning">Dit product is niet op voorraad</div>
+                        {% endif %}
+                        <p class="hidden-xs">
+                        <strong >EAN: </strong>{{ order_product.product.ean }}
+                        </p>
+                        <p class="hidden-xs" style="margin-top: -10px">
+						<strong >SKU: </strong>{{ order_product.product.sku }}
+						</p>
+						</div>
+
+						<div class="col-xs-6">
+						<div class="col-md-43 hidden-xs">
+						    <h6><strong>{{ order_product.quantity }}<span class="text-muted"></span></strong></h6>
+							</div>
+							<div class="col-xs-12 col-md-6 text-right">
+								<h6><strong>€ {{ (order_product.product.price_details.piece_price.in)|number_format(2, ',', '.') }}<span class="text-muted"></span></strong></h6>
+							</div>
+							 <div class="hidden-xs col-md-6 text-right">
+                                <h6><strong>€ {{ (order_product.product.price_details.piece_price.in * order_product.quantity)|number_format(2, ',', '.') }}</strong></h6>
+                            </div>
+						</div>
+					</div>
+					<hr>
+					{% endfor %}
+					<div class="row">
+						<div class="text-center">
+							<div class="col-md-9 hidden-xs">
+							 <div class="row">
+                            {% for payment_method in payment_methods %}
+                        <div style="text-align: center; margin-top: 20px;" class="payment_lg">
+                            <div class="row">
+                                <span>{{ payment_method.name }}</span>
+                            </div>
+                            {% if payment_method.logo %}
+                                <div class="row">
+                                    <img src="{{ payment_method.logo }}" style="height: 50px; width: auto;" />
+                                </div>
+                            {% endif %}
+                            <div class="row">
+                                <input type="radio" name="paymentMethod" class="radio-{{ payment_method.id }}" value="{{ payment_method.id }}">
+                            </div>
+                            {% if payment_method.extra is defined %}
+                                    {% for field in payment_method.extra.fields %}
+                                        {% if field.type == 'selectable' %}
+                                        <div class="row">
+                                            <select name="paymentMethodAttributes[{{ field.id }}]">
+                                                {% for value in payment_method.extra.issuers %}
+                                                    <option value="{{ value.id }}">{{ value.name }}</option>
+                                                {% endfor %}
+                                            </select>
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                        </div>
+
+                        {% if loop.index0 == 1 %}
+                            <div class="clearfix visible-xs-block"></div>
+                        {% endif %}
+                        {% if loop.index0 == 3 %}
+                            <div class="clearfix visible-sm-block"></div>
+                        {% endif %}
+                        {% if loop.index0 == 5 %}
+                            <div class="clearfix visible-md-block visible-lg-block"></div>
+                        {% endif %}
+                    {% endfor %}
+
+                </div>
+							</div>
+							<div class="col-md-3">
+								<table class="totalPrice">
+                                    <tr class="totals-row">
+                <td colspan="2"></td>
+                <td colspan="2" class="totals-column" align="left">Subtotaal (incl. BTW)</td>
+                <td colspan="1" class="totals-column" align="right">
+                    <p>
+                        &euro;&nbsp;<span class="shopping-bag-total">{{ shopping_cart_overview.subtotal_price|number_format(2, ',', '.') }}</span>
+                    </p>
+                </td>
+            </tr>
+            <tr class="totals-row">
+                <td colspan="2"></td>
+                <td colspan="2" class="totals-column" align="left">Verzendkosten</td>
+                <td colspan="1" class="totals-column" align="right">
+                    <p>
+                        &euro;&nbsp;<span class="shopping-bag-total">{{ shopping_cart_overview.shipping_costs|number_format(2, ',', '.') }}</span>
+                    </p>
+                </td>
+            </tr>
+            <tr class="totals-row">
+                <td colspan="2"></td>
+                <td colspan="2" class="" align="left">
+                    <p class="totals-paragraph">
+                        Totaal
+                    </p>
+                </td>
+                <td colspan="1" class="" align="right">
+                    <h4 class="totals-h4">
+                        &euro;&nbsp;<span class="shopping-bag-total">{{ shopping_cart_overview.total_price|number_format(2, ',', '.') }}</span>
+                    </h4>
+                </td>
+            </tr>
+                                </table>
+							</div>
+						</div>
+						 {% for payment_method in payment_methods %}
+                        <div class="hidden-md hidden-lg" style="text-align: center; margin-top: 20px;">
+                            <div class="row">
+                                <span>{{ payment_method.name }}</span>
+                            </div>
+                            {% if payment_method.logo %}
+                                <div class="row">
+                                    <img src="{{ payment_method.logo }}" style="height: 50px; width: auto;" />
+                                </div>
+                            {% endif %}
+                            <div class="row">
+                                <input type="radio" name="paymentMethod" class="radio-{{ payment_method.id }}" value="{{ payment_method.id }}">
+                            </div>
+                            {% if payment_method.extra is defined %}
+                                    {% for field in payment_method.extra.fields %}
+                                        {% if field.type == 'selectable' %}
+                                        <div class="row">
+                                            <select name="paymentMethodAttributes[{{ field.id }}]">
+                                                {% for value in payment_method.extra.issuers %}
+                                                    <option value="{{ value.id }}">{{ value.name }}</option>
+                                                {% endfor %}
+                                            </select>
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                        </div>
+
+                        {% if loop.index0 == 1 %}
+                            <div class="clearfix visible-xs-block"></div>
+                        {% endif %}
+                        {% if loop.index0 == 3 %}
+                            <div class="clearfix visible-sm-block"></div>
+                        {% endif %}
+                        {% if loop.index0 == 5 %}
+                            <div class="clearfix visible-md-block visible-lg-block"></div>
+                        {% endif %}
+                    {% endfor %}
+					</div>
+				</div>
+				<div class="panel-footer">
+					<div class="row text-center">
+						<div class="col-xs-7 col-md-8">
+							<table></table>
+						</div>
+						<div class="col-xs-5 col-md-4">
+							<button type="button" class="btn btn-success btn-block " >
+								Checkout
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+    {#
     <table class="shopping-bag table">
         {% if shopping_cart|length < 1 %}
             <tbody>
@@ -90,7 +307,7 @@
             </tbody>
         {% else %}
         <thead>
-        <tr>
+            <tr>
                 <th width="10%"></th>
                 <th>Product</th>
                 <th width="14%">Aantal</th>
@@ -103,7 +320,9 @@
 
         {% for order_product in shopping_cart %}
                 <tr class="{{ order_product.product.id }}">
-                    <td>
+                    <td style="@media screen and(max-width: 600px) {
+                                display: none;
+                             }">
                         <img src="{{ order_product.product.images|length > 0 ? order_product.product.images[0].url : '/img/no_image.gif' }}"
                              class="fill">
                     </td>
@@ -211,7 +430,7 @@
                 <div class="row">
 
                     {% for payment_method in payment_methods %}
-                        <div class="col-sm-3 col-xs-6 col-md-2" style="text-align: center; margin-top: 20px;">
+                        <div style="text-align: center; margin-top: 20px;">
                             <div class="row">
                                 <span>{{ payment_method.name }}</span>
                             </div>
@@ -287,7 +506,7 @@
         <!-- END IF HAS PRODUCTS -->
         {% endif %}
     </table>
-
+#}
 {% endblock %}
 
 {% block post_js %}
