--- a/templates/checkout.html.twig
+++ b/templates/checkout.html.twig
@@ -49,7 +49,6 @@
     <form class="form-horizontal confirm-form bv-form" role="form" method="post">
     <input type="hidden" name="submitting" value="1" />
     <div class="row" style="margin: 0;">
-    		<div class="row">
     			<div class="col-xs-6">
     				<address>
     				<strong>Factuuradres:</strong><br>
@@ -68,15 +67,12 @@
     					{{ customer_details.shipping_is_billing ? customer_details.billing_address.country_name : customer_details.shipping_address.country_name }}
     				</address>
     			</div>
-    		</div>
-    			<div class="row">
     			<div class="col-xs-6">
     				<address>
     					<strong>Contact info:</strong><br>
     					{{ customer_details.email }}<br>
     					{{ customer_details.telephone }}<br><br>
     				</address>
-    			</div>
     		</div>
     	</div>
 
@@ -88,13 +84,13 @@
 							<div class="col-md-3 col-md-offset-2 hidden-xs">
 								<h4>Product</h4>
 							</div>
-							<div class="col-md-3 hidden-xs">
+							<div class="col-md-3 hidden-xs text-right">
 								<h4>Aantal</h4>
 							</div>
-							<div class="col-md-3 hidden-xs">
+							<div class="col-md-2 hidden-xs text-right">
 								<h4>Stukprijs</h4>
 							</div>
-							<div class="col-md-3 hidden-xs">
+							<div class="col-md-2 hidden-xs text-right">
 								<h4>Totaalprijs</h4>
 							</div>
 						</div>
@@ -108,7 +104,7 @@
                              class="fill">
 
 						</div>
-						<div class="col-xs-6 col-md-2">
+						<div class="col-xs-6 col-md-3">
 							<strong><a class="product-name" href="{{ lang.url.product ~ order_product.product.name|url_encode ~ '/' ~ order_product.product.id }}">{{ order_product.product.name }}</a></strong>
                         <br>
                           {% if order_product.product.stock is defined and order_product.product.stock > 0 %}
@@ -146,17 +142,15 @@
 						</p>
 						</div>
 
-						<div class="col-xs-6">
-						<div class="col-md-43 hidden-xs">
+						<div class="col-md-3 hidden-xs text-right">
 						    <h6><strong>{{ order_product.quantity }}<span class="text-muted"></span></strong></h6>
-							</div>
-							<div class="col-xs-12 col-md-6 text-right">
-								<h6><strong>€ {{ (order_product.product.price_details.piece_price.in)|number_format(2, ',', '.') }}<span class="text-muted"></span></strong></h6>
-							</div>
-							 <div class="hidden-xs col-md-6 text-right">
-                                <h6><strong>€ {{ (order_product.product.price_details.piece_price.in * order_product.quantity)|number_format(2, ',', '.') }}</strong></h6>
-                            </div>
-						</div>
+                        </div>
+                        <div class="col-md-2 text-right">
+                            <h6><strong>€ {{ (order_product.product.price_details.piece_price.in)|number_format(2, ',', '.') }}<span class="text-muted"></span></strong></h6>
+                        </div>
+                         <div class="hidden-xs col-md-2 text-right">
+                            <h6><strong>€ {{ (order_product.product.price_details.piece_price.in * order_product.quantity)|number_format(2, ',', '.') }}</strong></h6>
+                        </div>
 					</div>
 					<hr>
 					{% endfor %}
