--- a/templates/shopping_cart_overview.html.twig
+++ b/templates/shopping_cart_overview.html.twig
@@ -40,6 +40,7 @@
         </div>
     {% endif %}
 
+    {#
     <table class="shopping-bag table">
 
         {% if shopping_cart|length < 1 %}
@@ -180,8 +181,163 @@
                 </td>
             </tr>
             </tfoot>
+
         {% endif %}
         <!-- END IF HAS PRODUCTS -->
     </table>
+    #}
+    <div class="col-xs-12">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <div class="panel-title">
+                    <div class="row">
+                        <div class="col-md-3 col-xs-4 col-md-offset-2">
+                            <h4>Product</h4>
+                        </div>
+                        <div class="col-md-3 col-xs-4 text-right">
+                            <h4>Aantal</h4>
+                        </div>
+                        <div class="col-md-2 hidden-xs text-right">
+                            <h4>Stukprijs</h4>
+                        </div>
+                        <div class="col-md-2 col-xs-4 text-right">
+                            <h4>Totaalprijs</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="panel-body">
+                {% for order_product in shopping_cart %}
+                    <div class="row">
+                        <div class="col-md-2 hidden-xs"> <img src="{{ order_product.product.images|length > 0 ? order_product.product.images[0].url : '/img/no_image.gif' }}"
+                                                              class="fill">
+                        </div>
+                        <div class="col-xs-4 col-md-3">
+                            <strong><a class="product-name" href="{{ lang.url.product ~ order_product.product.name|url_encode ~ '/' ~ order_product.product.id }}">{{ order_product.product.name }}</a></strong>
+                            <br>
+                            {% if order_product.product.stock is defined and order_product.product.stock > 0 %}
+
+                                {% if order_product.quantity > order_product.product.stock %}
+                                    <div class="label label-warning hidden-xs">
+                                        Niet genoeg op voorraad, langere levertijd
+                                    </div>
+                                {% else %}
+                                    <div class="label label-success hidden-xs">
+                                        {% if order_product.product.stock > 10 %}
+                                            <div class="label label-success">Ruimschoots op voorraad</div>
+                                        {% else %}
+                                            <div class="label label-success">Op voorraad</div>
+                                        {% endif %}
+                                    </div>
+                                    <br/>
+                                {% endif %}
+
+                                {% if product.shipping_details.shipping_days %}
+                                    <div class="label label-info">Levertijd {{ product.shipping_details.shipping_days }}
+                                        werkdag(en)
+                                    </div>
+                                {% else %}
+                                    <div class="label label-info">Levertijd 1-3 werkdag(en)</div>
+                                {% endif %}
+                            {% else %}
+                                <div class="label label-warning">Dit product is niet op voorraad</div>
+                            {% endif %}
+                            <p class="hidden-xs">
+                                <strong >EAN: </strong>{{ order_product.product.ean }}
+                            </p>
+                            <p class="hidden-xs" style="margin-top: -10px">
+                                <strong >SKU: </strong>{{ order_product.product.sku }}
+                            </p>
+                        </div>
+
+                        <div class="col-md-3 col-xs-4 text-right product-input">
+                            <input class="product-quantity" type="text" data-truevalue="{{ order_product.quantity }}"
+                                   value="{{ order_product.quantity }}" disabled/>
+
+                            {% if transaction is not defined or transaction.status != 'CONFIRMED' %}
+
+                                <a href="{{ lang.url.shopping_cart_add ~ order_product.product.id ~ '/1' }}"><span
+                                            class="glyphicon glyphicon-plus"></span></a>
+                                <a href="{{ lang.url.shopping_cart_remove ~ order_product.product.id ~ '/1' }}"><span
+                                            class="glyphicon glyphicon-minus"></span></a>
+
+                            {% endif %}
+                        </div>
+                        <div class="col-md-2 text-right hidden-xs">
+                            <h6><strong>€ {{ (order_product.product.price_details.piece_price.in)|number_format(2, ',', '.') }}<span class="text-muted"></span></strong></h6>
+                        </div>
+                        <div class="col-md-2 text-right">
+                            <h6><strong>€ {{ (order_product.product.price_details.piece_price.in * order_product.quantity)|number_format(2, ',', '.') }}</strong></h6>
+                        </div>
+                    </div>
+                    <hr>
+                {% endfor %}
+                <div class="row">
+                    <div class="text-center">
+                        <div class="col-md-9 hidden-xs">
+                        </div>
+                        <div class="col-md-3">
+                            <table class="totalPrice">
+                                <tr class="totals-row">
+                                    <td colspan="2"></td>
+                                    <td colspan="2" class="totals-column" align="left">Subtotaal (incl. BTW)</td>
+                                    <td colspan="1" class="totals-column" align="right">
+                                        <p>
+                                            &euro;&nbsp;<span class="shopping-bag-total">{{ shopping_cart_overview.subtotal_price|number_format(2, ',', '.') }}</span>
+                                        </p>
+                                    </td>
+                                </tr>
+                                <tr class="totals-row">
+                                    <td colspan="2"></td>
+                                    <td colspan="2" class="totals-column" align="left">Verzendkosten</td>
+                                    <td colspan="1" class="totals-column" align="right">
+                                        <p>
+                                            &euro;&nbsp;<span class="shopping-bag-total">{{ shopping_cart_overview.shipping_costs|number_format(2, ',', '.') }}</span>
+                                        </p>
+                                    </td>
+                                </tr>
+                                <tr class="totals-row">
+                                    <td colspan="2"></td>
+                                    <td colspan="2" class="" align="left">
+                                        <p class="totals-paragraph">
+                                            Totaal
+                                        </p>
+                                    </td>
+                                    <td colspan="1" class="" align="right">
+                                        <h4 class="totals-h4">
+                                            &euro;&nbsp;<span class="shopping-bag-total">{{ shopping_cart_overview.total_price|number_format(2, ',', '.') }}</span>
+                                        </h4>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+
+                        {% if loop.index0 == 1 %}
+                            <div class="clearfix visible-xs-block"></div>
+                        {% endif %}
+                        {% if loop.index0 == 3 %}
+                            <div class="clearfix visible-sm-block"></div>
+                        {% endif %}
+                        {% if loop.index0 == 5 %}
+                            <div class="clearfix visible-md-block visible-lg-block"></div>
+                        {% endif %}
+                </div>
+            </div>
+            <div class="panel-footer">
+                <div class="row text-center">
+                    <div class="col-xs-7 col-md-8">
+                        <table></table>
+                    </div>
+                    <div class="col-xs-12 col-md-4">
+                        <button type="button" class="btn btn btn-block btn-primary">
+                            Naar afrekenen
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
