--- a/templates/shopping_cart_overview.html.twig
+++ b/templates/shopping_cart_overview.html.twig
@@ -1,4 +1,5 @@
 
+
 {% extends "layouts/layout.html.twig" %}
 
 {% block content %}
@@ -186,6 +187,19 @@
         <!-- END IF HAS PRODUCTS -->
     </table>
     #}
+    {% if shopping_cart|length < 1 %}
+        <div class="col-xs-12">
+        <div class="panel panel-info">
+        <div class="panel-heading">
+            <div class="panel-title">
+                <div class="row">
+                    <div class="empty_shopping_cart col-md-12 col-xs-12">
+                        <h4>Winkelwagen is leeg</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% else %}
     <div class="col-xs-12">
         <div class="panel panel-info">
             <div class="panel-heading">
@@ -314,15 +328,15 @@
                         </div>
                     </div>
 
-                        {% if loop.index0 == 1 %}
-                            <div class="clearfix visible-xs-block"></div>
-                        {% endif %}
-                        {% if loop.index0 == 3 %}
-                            <div class="clearfix visible-sm-block"></div>
-                        {% endif %}
-                        {% if loop.index0 == 5 %}
-                            <div class="clearfix visible-md-block visible-lg-block"></div>
-                        {% endif %}
+                    {% if loop.index0 == 1 %}
+                        <div class="clearfix visible-xs-block"></div>
+                    {% endif %}
+                    {% if loop.index0 == 3 %}
+                        <div class="clearfix visible-sm-block"></div>
+                    {% endif %}
+                    {% if loop.index0 == 5 %}
+                        <div class="clearfix visible-md-block visible-lg-block"></div>
+                    {% endif %}
                 </div>
             </div>
             <div class="panel-footer">
@@ -331,13 +345,15 @@
                         <table></table>
                     </div>
                     <div class="col-xs-12 col-md-4">
-                        <button type="button" class="btn btn btn-block btn-primary">
+                        <button type="submit" class="btn btn btn-block btn-primary">Naar afrekenen</button>
+                        {#<button type="button" class="btn btn btn-block btn-primary">
                             Naar afrekenen
-                        </button>
+                        </button> #}
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    {% endif %}
 
 {% endblock %}
