--- a/templates/shopping_cart_overview.html.twig
+++ b/templates/shopping_cart_overview.html.twig
@@ -266,7 +266,7 @@
                         </div>
 
                         <div class="col-md-3 col-xs-4 text-right product-input">
-                            <input class="product-quantity col-md-2 col-md-offset-8 col-xs-offset-0 col-xs-12 col-sm" type="text" data-truevalue="{{ order_product.quantity }}"
+                            <input class="product-quantity col-md-2 col-md-offset-8" type="text" data-truevalue="{{ order_product.quantity }}"
                                    value="{{ order_product.quantity }}" disabled/>
 
                             {% if transaction is not defined or transaction.status != 'CONFIRMED' %}
@@ -348,7 +348,7 @@
                          {% if transaction is defined and transaction %}
                         <a href="{{ lang.url.checkout }}"><button type="submit" class="btn btn btn-block btn-primary">Naar afrekenen</button></a>
                         {% else %}
-
+                            <a href="{{ lang.url.customer_details }}"><button type="submit" class="btn btn btn-block btn-primary">Naar klantgegevens</button></a>
                         {% endif %}
                     </div>
                 </div>
