--- a/templates/blocks/main_menu.html.twig
+++ b/templates/blocks/main_menu.html.twig
@@ -151,7 +151,7 @@
                 <a href="{{ lang.url.category_products ~ category.id }}">{{ category.name }}</a>
             </li>
         {% else %}
-            {#<li style="text-align: center; font-weight: bold">Geen categorieën</li>#}
+            {#<li style="float:left;text-align: center; width: 75%; margin: 4% 0; font-weight: bold">Geen categorieën</li>#}
         {% endfor %}
 
         <!-- Add additional categories to a dropdown -->
@@ -336,7 +336,7 @@
                 <a href="{{ lang.url.category_products ~ category.id }}">{{ category.name }}</a>
             </li>
         {% else %}
-            {#<li style="text-align: center; font-weight: bold">Geen categorieën</li>#}
+            {#<li style="float:left;text-align: center; width: 75%; margin: 4% 0; font-weight: bold">Geen categorieën</li>#}
         {% endfor %}
 
         <!-- Add additional categories to a dropdown -->
